@@ -14,7 +14,6 @@ buildscript {
         classpath "io.spring.gradle:propdeps-plugin:0.0.10.RELEASE"
         // this allows us to find outdated dependencies via ./gradlew dependencyUpdates
         classpath "com.github.ben-manes:gradle-versions-plugin:0.29.0"
-        //jhipster-needle-gradle-buildscript-dependency - JHipster will add additional gradle build script plugins here
     }
 }
 
@@ -30,16 +29,15 @@ plugins {
     id "net.ltgt.apt-eclipse"
     id "net.ltgt.apt-idea"
     id "net.ltgt.apt"
-    //jhipster-needle-gradle-plugins - JHipster will add additional gradle plugins here
-    id "com.diffplug.spotless" version "5.2.0"
+    id "com.diffplug.spotless" version "5.6.1"
 }
 
 group = "de.tum.in.www1.artemis"
-version = "4.4.6"
+version = "4.5.1"
 description = "Interactive Learning with Individual Feedback"
 
-sourceCompatibility=14
-targetCompatibility=14
+sourceCompatibility=15
+targetCompatibility=15
 
 apply plugin: "com.github.ben-manes.versions"
 
@@ -80,8 +78,7 @@ spotless {
         importOrderFile "artemis-spotless.importorder"
         eclipse().configFile "artemis-spotless-style.xml"
 
-        // the following command is not compatible with Java14 switch expressions
-//        removeUnusedImports()
+        removeUnusedImports()
     }
 }
 
@@ -91,14 +88,9 @@ springBoot {
     mainClassName = "de.tum.in.www1.artemis.ArtemisApp"
 }
 
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
-
 // Execute the test cases: ./gradlew executeTests
 
 test {
-    jvmArgs(['--enable-preview'])
     useJUnitPlatform()
     exclude "**/*IT*", "**/*IntTest*", "**/*CucumberIT*"
     testLogging.showStandardStreams = true
@@ -110,7 +102,6 @@ test {
 }
 
 task integrationTest(type: Test) {
-    jvmArgs(['--enable-preview'])
     description = "Execute integration tests."
     group = "verification"
     include "**/*IT*", "**/*IntTest*"
@@ -134,6 +125,10 @@ task testReport(type: TestReport) {
 task integrationTestReport(type: TestReport) {
     destinationDir = file("$buildDir/reports/tests")
     reportOn integrationTest
+}
+
+jacoco {
+    toolVersion = "0.8.6"
 }
 
 jacocoTestReport {
@@ -168,7 +163,6 @@ repositories {
     mavenLocal()
     mavenCentral()
     jcenter()
-    //jhipster-needle-gradle-repositories - JHipster will add additional repositories
 }
 
 dependencies {
@@ -188,7 +182,7 @@ dependencies {
     implementation "org.imsglobal:basiclti-util:1.2.0"
     implementation "org.jasypt:jasypt:1.9.3"
     implementation "me.xdrop:fuzzywuzzy:1.3.1"
-    implementation "com.atlassian.bamboo:bamboo-specs:7.0.2"
+    implementation "com.atlassian.bamboo:bamboo-specs:7.1.2"
     implementation "com.thoughtworks.qdox:qdox:2.0.0"
     implementation "io.sentry:sentry-spring:1.7.30"
     implementation "io.sentry:sentry-logback:1.7.30"
@@ -263,7 +257,7 @@ dependencies {
     implementation "org.zalando:problem-spring-web:0.25.2"
     implementation "com.ibm.icu:icu4j:67.1"
     implementation 'com.github.seancfoley:ipaddress:5.3.1'
-    compile group: 'info.debatty', name: 'java-string-similarity', version: '2.0.0'
+    implementation 'info.debatty:java-string-similarity:2.0.0'
 
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstruct_version}"
     annotationProcessor "org.hibernate:hibernate-jpamodelgen:${hibernate_version}"
@@ -291,8 +285,7 @@ dependencies {
     testImplementation 'org.apache.maven.surefire:surefire-report-parser:2.22.2'
 
     // Java's lightweight JSON library needed for the internals of the MockRestServiceServer
-    testImplementation group: 'org.json', name: 'json', version: '20200518'
-    //jhipster-needle-gradle-dependency - JHipster will add additional dependencies here
+    testImplementation 'org.json:json:20200518'
 }
 
 task cleanResources(type: Delete) {
@@ -357,7 +350,7 @@ if (project.hasProperty("nodeInstall")) {
 
 // Command to execute the JavaDoc checkstyle verification ./gradlew checkstyleMain
 checkstyle {
-    toolVersion "8.36"
+    toolVersion "8.36.1"
     configFile file("${rootDir}/checkstyle.xml")
     checkstyleTest.enabled = false
     maxErrors = 0
